[package]
name = "tuple-space-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuple-space = {git = "ssh://misc.aimred.com/var/local/git/TupleSpace/tuple-space"}
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0"
log = "0.4"
env_logger = "0.9"
